crates/sverb-tui/src/app/snapshots/sverb_tui__app__share_tests__t07_letterbox_80x24.snap
---
source: crates/sverb-tui/src/app/share_tests.rs
expression: big
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────
 1 viewing shared session … ┬ +                                                 
┌ viewing shared session (read-only) ──────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                             top-left                                         │
│                                                                              │
│                                                                              │
│                             last row   [end]                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 TERMINAL                                                             ^\ ? help
