crates/sverb-tui/src/app/snapshots/sverb_tui__app__share_tests__t11_approve_80x24.snap
---
source: crates/sverb-tui/src/app/share_tests.rs
expression: "h.render(80, 24)"
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────
 1 web-1 ┬ +                                                                    
┌ session 1 ───────────────────────────────────────────────────────────────────┐
│Session pane (the terminal view arrives with M1-10).                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│           ┌ Viewer wants to join ────────────────────────────────┐           │
│           │bob wants to join (control mode) "web-1".             │           │
│           │Account: —                                            │           │
│           │From:    198.51.100.0/24                              │           │
│           │                                                      │           │
│           │[a]pprove · [d]eny                                    │           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 NORMAL                                                      ^\ ? help · q quit
