crates/sverb-tui/src/app/snapshots/sverb_tui__app__share_tests__t11_badge_control_80x24.snap
---
source: crates/sverb-tui/src/app/share_tests.rs
expression: screen
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────
 1 web-1 ┬ +                                                                    
┌ web-1 ────────────────────────────────────────────────── ⚠ shared · control ─┐
│$ make test                                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 TERMINAL                                                             ^\ ? help
